--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,23 @@
 spring.thymeleaf.cache=false
 spring.thymeleaf.suffix=.html
 spring.web.resources.add-mappings=true
-server.port=8081
+server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/springims?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-
 app.storage.base-dir=E:/User/IMS/Springboot_Intern_Management_System/src/main/resources/static/files/Intern Docs/
 app.storage.base-dir2=E:/User/IMS/Springboot_Intern_Management_System/src/main/resources/static/files/Group Docs/
+app.storage.base-dir5=E:/User/IMS/Springboot_Intern_Management_System/src/main/resources/static/files/Undertaking/
+app.storage.base-dir4=E:/User/IMS/Springboot_Intern_Management_System/src/main/resources/static/files/Admin Docs/
+
+thesis.storage.directory=/path/to/thesis/storage
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -24,3 +27,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 server.servlet.session.timeout=3600s
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
